# Spybot2

./: .dockerignore  .env.test  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  db.sqlite3  deploy.sh  docker-compose-local.yml  docker-compose.override.yml  docker-compose.yml  manage.py  pyproject.toml  requirements.txt  run.sh  spybot2.service  stunnel.conf
.github/workflows/: build-push-docker-image.yml  deploy-docker.yml  deploy.yml  django.yml  manual-deploy-docker.yml  test-report.yml
Spybot2/: asgi.py  celery.py  models.py  settings.py  urls.py  wsgi.py
frontend/: chart_utils.js  early.js  main.js  modal.js  package-lock.json  package.json  passkeys.js  rollup.config.mjs
infrastructure/: Caddyfile  docker-compose.yml
scripts/: copy_to_local_db.sh
spybot/: admin.py  api.py  apps.py  forms.py  models.py  schemas.py  tasks.py  urls.py  views.py  visualization.py
spybot/auth/: auth.py  backend.py  last_seen_middleware.py  passkeys.py
spybot/auth/backend/: link_backend.py  passkey_backend.py
spybot/management/commands/: recorder.py
spybot/migrations/: 0001_initial.py  0002_alter_loginlink_code.py  0002_tsuser_online.py  0003_rename_channel_id_tsuseractivity_channel_and_more.py  0003_rename_hourlyactiv_datetim_96f0af_idx_hourlyactiv_datetim_4aadb3_idx_and_more.py  0004_hourlyactivity.py  0005_hourlyactivity_hourlyactiv_datetim_96f0af_idx.py  0006_tsuseractivity_tsuseractiv_startti_95ea75_idx.py  0007_alter_tsuser_id_queuedclientmessage_award_and_more.py  0008_alter_award_date.py  0009_newsevent.py  0010_alter_tsuser_id.py  0011_alter_tsuser_id.py  0012_mergeduser_tsuser_merged_user.py  0013_mergeduser_obsolete_alter_tsuser_merged_user.py  0013_migrate_old_newsevent_links.py  0014_mergeduser_steam_id_alter_award_tsuser.py  0015_alter_mergeduser_steam_id.py  0016_steamid.py  0017_remove_mergeduser_steam_id.py  0018_steamid_account_name.py  0019_mergeduser_last_login_mergeduser_password_loginlink.py  0020_mergeduser_is_superuser.py  0021_userpasskey.py  0022_alter_userpasskey_token.py
spybot/recorder/: client.py  recorder.py  ts.py
spybot/recorder/cron/: cron.py
spybot/remote/: steam_api.py
spybot/static/: styles.css  theme.js
spybot/templates/: base.html  home.html
spybot/templates/spybot/: base.html  base_old.html  form_snippet.html  halloffame.html  helloworld.html  home.html  live.html  login.html  login_teamspeak.html  profile.html  user.html  (+2 more)
spybot/templatetags/: __init__.py  tabler_icons.py  ts_filters.py  util.py
spybot/tests/: runner_testcontainers_db.py  test_api.py  test_models.py  test_views.py
spybot/views/: common.py  views.py
(+25 files in other folders)
