[project]
name = "spybot2"
version = "0.1.0"
description = ""
authors = [
    { name = "Benno", email = "bensge@me.com" },
    { name = "Justus", email = "justus.fab@gmail.com" },
]
classifiers = ["License :: OSI Approved :: MIT License"]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "Django ~=4.2",
    "ts3 ~=2.0.0b3",
    "django-environ ~=0.11.2",
    "mysqlclient ~=2.2",
    "django-crontab ~=0.7.1",
    "num2words ~=0.5.12",
    "requests ~=2.31",
    "fido2 ~=1.1",
    "user-agents ~=2.2",
    "django-bootstrap5 ~=24.2",
]


[tool.uv]
dev-dependencies = ["unittest-xml-reporting ~=3.2"]

[tool.setuptools]
py-modules = []