[project]
name = "spybot2"
version = "0.1.0"
description = ""
authors = [
    { name = "Benno", email = "bensge@me.com" },
    { name = "Justus", email = "justus.fab@gmail.com" },
]
classifiers = ["License :: OSI Approved :: MIT License"]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "Django ~=5.1",
    "ts3 ~=2.0.0b3",
    "django-environ ~=0.11.2",
    "num2words ~=0.5.12",
    "requests ~=2.31",
    "fido2 ~=1.1",
    "user-agents ~=2.2",
    "django-bootstrap5 ~=24.2",
    "sentry-sdk>=2.13.0",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "celery>=5.4.0",
    "redis>=5.2.1",
]


[tool.uv]
dev-dependencies = [
    "unittest-xml-reporting ~=3.2",
    "testcontainers[postgres]>=4.9.0",
    "ruff>=0.9.7",
    "pre-commit>=4.1.0",
]

[tool.setuptools]
py-modules = []
